[package]
name = "thumbnailer"
readme = "README.md"
license = "Apache-2.0"
authors = ["trivernis <trivernis@protonmail.com>"]
description = "An image thumbnail creation library"
version = "0.2.3"
edition = "2018"
repository = "https://github.com/Trivernis/thumbnailer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = "0.2.0"
mime = "0.3.16"
rayon = "1.5.1"
ffmpeg-next = {version = "4.4.0", optional=true}
tempfile = "3.2.0"

[dependencies.image]
version = "0.23.14"

[features]
default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next"]